Atmosphere feature tests passing
